src/test/ui/borrowck/borrowck-ref-mut-of-imm.nll.stderr
error[E0596]: cannot borrow `x.0` as mutable, as `x` is not declared as mutable
  --> $DIR/borrowck-ref-mut-of-imm.rs:14:12
   |
LL | fn destructure(x: Option<isize>) -> isize {
   |                - help: consider changing this to be mutable: `mut x`
...
LL |       Some(ref mut v) => *v //~ ERROR cannot borrow
   |            ^^^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
